# libzsh

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: libzsh-config.cmake.in
examples/: zle_interactive.c
src/: gen_zle_lists.sh
tests/: test_main.c  test_zle.c
