cmake_minimum_required(VERSION 3.16)
project(libzsh VERSION 0.1.0 LANGUAGES C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

# Paths
set(ZSH_SOURCE_DIR "${CMAKE_SOURCE_DIR}/3rdparty/zsh")
set(ZSH_BUILD_DIR "${CMAKE_BINARY_DIR}/zsh-build")
set(ZSH_SRC_DIR "${ZSH_SOURCE_DIR}/Src")
set(ZSH_ZLE_DIR "${ZSH_SOURCE_DIR}/Src/Zle")
set(GENERATED_DIR "${CMAKE_BINARY_DIR}/generated")

# Create directories
file(MAKE_DIRECTORY ${ZSH_BUILD_DIR})
file(MAKE_DIRECTORY ${GENERATED_DIR})
file(MAKE_DIRECTORY ${GENERATED_DIR}/Zle)

# Find required tools
find_program(AWK awk REQUIRED)
find_program(SED sed REQUIRED)

# Version info from zsh
set(ZSH_VERSION "5.9")

# Generate configure if it doesn't exist
if(NOT EXISTS "${ZSH_SOURCE_DIR}/configure")
    find_program(AUTOCONF autoconf)
    find_program(AUTOHEADER autoheader)
    if(NOT AUTOCONF OR NOT AUTOHEADER)
        message(FATAL_ERROR
            "The zsh configure script doesn't exist and autoconf is not installed.\n"
            "Please either:\n"
            "  1. Install autoconf: sudo apt install autoconf\n"
            "  2. Or run 'autoconf' manually in ${ZSH_SOURCE_DIR}")
    endif()
    message(STATUS "Generating configure script...")
    execute_process(
        COMMAND ${AUTOHEADER}
        WORKING_DIRECTORY ${ZSH_SOURCE_DIR}
        RESULT_VARIABLE AUTOHEADER_RESULT
    )
    execute_process(
        COMMAND ${AUTOCONF}
        WORKING_DIRECTORY ${ZSH_SOURCE_DIR}
        RESULT_VARIABLE AUTOCONF_RESULT
    )
    if(NOT AUTOCONF_RESULT EQUAL 0)
        message(FATAL_ERROR "autoconf failed")
    endif()
endif()

# Run configure if config.h doesn't exist
if(NOT EXISTS "${ZSH_BUILD_DIR}/config.h")
    message(STATUS "Running configure...")
    execute_process(
        COMMAND ${ZSH_SOURCE_DIR}/configure
            --disable-dynamic
            --disable-restricted-r
            --disable-locale
            --with-tcsetpgrp
        WORKING_DIRECTORY ${ZSH_BUILD_DIR}
        RESULT_VARIABLE CONFIGURE_RESULT
    )
    if(NOT CONFIGURE_RESULT EQUAL 0)
        message(FATAL_ERROR "configure failed")
    endif()
endif()

# Run make prep and headers to generate .mdh and .epro files
if(NOT EXISTS "${ZSH_BUILD_DIR}/Src/zsh.mdh")
    message(STATUS "Generating zsh module headers...")
    execute_process(
        COMMAND make prep
        WORKING_DIRECTORY ${ZSH_BUILD_DIR}
        RESULT_VARIABLE MAKE_PREP_RESULT
    )
    if(NOT MAKE_PREP_RESULT EQUAL 0)
        message(FATAL_ERROR "make prep failed")
    endif()
    execute_process(
        COMMAND make -C Src headers
        WORKING_DIRECTORY ${ZSH_BUILD_DIR}
        RESULT_VARIABLE MAKE_HEADERS_RESULT
    )
    if(NOT MAKE_HEADERS_RESULT EQUAL 0)
        message(FATAL_ERROR "make headers failed")
    endif()
endif()

# Copy config.h to generated directory
configure_file(${ZSH_BUILD_DIR}/config.h ${GENERATED_DIR}/config.h COPYONLY)

# Generate version.h
file(WRITE ${GENERATED_DIR}/version.h "#define ZSH_VERSION \"${ZSH_VERSION}\"\n")

# Generate patchlevel.h
execute_process(
    COMMAND git describe --tags --long --abbrev=7
    WORKING_DIRECTORY ${ZSH_SOURCE_DIR}
    OUTPUT_VARIABLE GIT_DESCRIBE
    OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
    RESULT_VARIABLE GIT_RESULT
)
if(GIT_RESULT EQUAL 0)
    file(WRITE ${GENERATED_DIR}/patchlevel.h "#define ZSH_PATCHLEVEL \"${GIT_DESCRIBE}\"\n")
else()
    file(WRITE ${GENERATED_DIR}/patchlevel.h "#define ZSH_PATCHLEVEL \"${ZSH_VERSION}\"\n")
endif()

# Generate zshpaths.h
file(WRITE ${GENERATED_DIR}/zshpaths.h
"#define MODULE_DIR \"/usr/local/lib/zsh/${ZSH_VERSION}\"
#define FPATH_DIR \"/usr/local/share/zsh/${ZSH_VERSION}/functions\"
")

# Generate zshxmods.h (empty for static build)
file(WRITE ${GENERATED_DIR}/zshxmods.h "/* Static build - no external modules */\n")

# Generate zshcurses.h
include(CheckIncludeFile)
check_include_file("ncurses.h" HAVE_NCURSES_H)
check_include_file("ncurses/ncurses.h" HAVE_NCURSES_NCURSES_H)
check_include_file("curses.h" HAVE_CURSES_H)

if(HAVE_NCURSES_H)
    file(WRITE ${GENERATED_DIR}/zshcurses.h "#include <ncurses.h>\n")
elseif(HAVE_NCURSES_NCURSES_H)
    file(WRITE ${GENERATED_DIR}/zshcurses.h "#include <ncurses/ncurses.h>\n")
elseif(HAVE_CURSES_H)
    file(WRITE ${GENERATED_DIR}/zshcurses.h "#include <curses.h>\n")
else()
    file(WRITE ${GENERATED_DIR}/zshcurses.h "/* No curses header found */\n")
endif()

# Generate zshterm.h
check_include_file("term.h" HAVE_TERM_H)
check_include_file("ncurses/term.h" HAVE_NCURSES_TERM_H)

if(HAVE_TERM_H)
    file(WRITE ${GENERATED_DIR}/zshterm.h "#include <term.h>\n")
elseif(HAVE_NCURSES_TERM_H)
    file(WRITE ${GENERATED_DIR}/zshterm.h "#include <ncurses/term.h>\n")
else()
    file(WRITE ${GENERATED_DIR}/zshterm.h "/* No term header found */\n")
endif()

# Use signames.c from zsh build (already generated by make headers)

# Generate ZLE widget files using shell script
add_custom_command(
    OUTPUT
        ${GENERATED_DIR}/Zle/thingies.list
        ${GENERATED_DIR}/Zle/widgets.list
        ${GENERATED_DIR}/Zle/zle_things.h
        ${GENERATED_DIR}/Zle/zle_widget.h
    COMMAND bash ${CMAKE_SOURCE_DIR}/src/gen_zle_lists.sh
        ${ZSH_ZLE_DIR}/iwidgets.list
        ${GENERATED_DIR}/Zle
        ${ZSH_ZLE_DIR}/zle_things.sed
        ${ZSH_ZLE_DIR}/zle_widget.sed
    DEPENDS
        ${ZSH_ZLE_DIR}/iwidgets.list
        ${ZSH_ZLE_DIR}/zle_things.sed
        ${ZSH_ZLE_DIR}/zle_widget.sed
        ${CMAKE_SOURCE_DIR}/src/gen_zle_lists.sh
    COMMENT "Generating ZLE headers"
    VERBATIM
)

# Generate bltinmods.list (minimal for library usage)
file(WRITE ${GENERATED_DIR}/bltinmods.list
"/* linked-in module bindings */

/* The order of these modules matters: dependencies must come first. */

")

# Main zsh/core source files
set(ZSH_CORE_SOURCES
    ${ZSH_SRC_DIR}/builtin.c
    ${ZSH_SRC_DIR}/compat.c
    ${ZSH_SRC_DIR}/cond.c
    ${ZSH_SRC_DIR}/context.c
    ${ZSH_SRC_DIR}/exec.c
    ${ZSH_SRC_DIR}/glob.c
    ${ZSH_SRC_DIR}/hashtable.c
    ${ZSH_SRC_DIR}/hashnameddir.c
    ${ZSH_SRC_DIR}/hist.c
    ${ZSH_SRC_DIR}/init.c
    ${ZSH_SRC_DIR}/input.c
    ${ZSH_SRC_DIR}/jobs.c
    ${ZSH_SRC_DIR}/lex.c
    ${ZSH_SRC_DIR}/linklist.c
    ${ZSH_SRC_DIR}/loop.c
    ${ZSH_SRC_DIR}/math.c
    ${ZSH_SRC_DIR}/mem.c
    ${ZSH_SRC_DIR}/module.c
    ${ZSH_SRC_DIR}/options.c
    ${ZSH_SRC_DIR}/params.c
    ${ZSH_SRC_DIR}/parse.c
    ${ZSH_SRC_DIR}/pattern.c
    ${ZSH_SRC_DIR}/prompt.c
    ${ZSH_SRC_DIR}/signals.c
    ${ZSH_SRC_DIR}/sort.c
    ${ZSH_SRC_DIR}/string.c
    ${ZSH_SRC_DIR}/subst.c
    ${ZSH_SRC_DIR}/text.c
    ${ZSH_SRC_DIR}/utils.c
    ${ZSH_SRC_DIR}/openssh_bsd_setres_id.c
    ${ZSH_BUILD_DIR}/Src/signames.c
)

# ZLE source files
set(ZSH_ZLE_SOURCES
    ${ZSH_ZLE_DIR}/zle_bindings.c
    ${ZSH_ZLE_DIR}/zle_hist.c
    ${ZSH_ZLE_DIR}/zle_keymap.c
    ${ZSH_ZLE_DIR}/zle_main.c
    ${ZSH_ZLE_DIR}/zle_misc.c
    ${ZSH_ZLE_DIR}/zle_move.c
    ${ZSH_ZLE_DIR}/zle_params.c
    ${ZSH_ZLE_DIR}/zle_refresh.c
    ${ZSH_ZLE_DIR}/zle_thingy.c
    ${ZSH_ZLE_DIR}/zle_tricky.c
    ${ZSH_ZLE_DIR}/zle_utils.c
    ${ZSH_ZLE_DIR}/zle_vi.c
    ${ZSH_ZLE_DIR}/zle_word.c
    ${ZSH_ZLE_DIR}/textobjects.c
)

# Custom target for generated files
add_custom_target(generate_zsh_headers
    DEPENDS
        ${GENERATED_DIR}/Zle/zle_things.h
        ${GENERATED_DIR}/Zle/zle_widget.h
)

# Create the library
add_library(zsh STATIC
    ${ZSH_CORE_SOURCES}
    ${ZSH_ZLE_SOURCES}
)

add_dependencies(zsh generate_zsh_headers)

# Include directories
target_include_directories(zsh
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src>
        $<BUILD_INTERFACE:${ZSH_SRC_DIR}>
        $<BUILD_INTERFACE:${ZSH_ZLE_DIR}>
        $<BUILD_INTERFACE:${ZSH_BUILD_DIR}/Src>
        $<BUILD_INTERFACE:${ZSH_BUILD_DIR}/Src/Zle>
        $<BUILD_INTERFACE:${ZSH_BUILD_DIR}>
        $<BUILD_INTERFACE:${GENERATED_DIR}>
        $<BUILD_INTERFACE:${GENERATED_DIR}/Zle>
        $<INSTALL_INTERFACE:include/libzsh>
    PRIVATE
        ${ZSH_SRC_DIR}
        ${ZSH_ZLE_DIR}
        ${ZSH_BUILD_DIR}/Src
        ${ZSH_BUILD_DIR}/Src/Zle
        ${GENERATED_DIR}/Zle
        ${ZSH_BUILD_DIR}
)

# Compile definitions
target_compile_definitions(zsh PRIVATE
    HAVE_CONFIG_H
    MODULE=zsh/main
    ZSH_HASH_DEBUG=1
)

# Find and link required libraries
find_library(NCURSES_LIB ncurses)
find_library(TINFO_LIB tinfo)
find_library(DL_LIB dl)
find_library(M_LIB m)
find_library(RT_LIB rt)
find_library(ICONV_LIB iconv)

target_link_libraries(zsh PUBLIC
    ${NCURSES_LIB}
    ${DL_LIB}
    ${M_LIB}
)

if(ICONV_LIB)
    target_link_libraries(zsh PUBLIC ${ICONV_LIB})
endif()

if(TINFO_LIB)
    target_link_libraries(zsh PUBLIC ${TINFO_LIB})
endif()

if(RT_LIB)
    target_link_libraries(zsh PUBLIC ${RT_LIB})
endif()

# Compiler warnings
target_compile_options(zsh PRIVATE
    -Wall
    -Wno-unused-parameter
    -Wno-sign-compare
    -Wno-implicit-fallthrough
    -Wno-missing-field-initializers
)

# Installation
install(TARGETS zsh
    EXPORT libzsh-targets
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

# Install headers for consumers
# Generated headers (config.h, version.h, etc.)
install(DIRECTORY ${GENERATED_DIR}/
    DESTINATION include/libzsh
    FILES_MATCHING PATTERN "*.h"
)

# Generated headers from zsh build (.mdh, .epro, sigcount.h, etc.)
install(DIRECTORY ${ZSH_BUILD_DIR}/Src/
    DESTINATION include/libzsh
    FILES_MATCHING
        PATTERN "*.mdh"
        PATTERN "*.epro"
        PATTERN "*.pro"
        PATTERN "sigcount.h"
        PATTERN "version.h"
        PATTERN "patchlevel.h"
        PATTERN "zshcurses.h"
        PATTERN "zshterm.h"
        PATTERN "bltinmods.list"
)

# Core zsh headers
install(FILES
    ${ZSH_SRC_DIR}/zsh.h
    ${ZSH_SRC_DIR}/zsh_system.h
    ${ZSH_SRC_DIR}/ztype.h
    ${ZSH_SRC_DIR}/hashtable.h
    ${ZSH_SRC_DIR}/signals.h
    ${ZSH_SRC_DIR}/prototypes.h
    ${ZSH_SRC_DIR}/wcwidth9.h
    DESTINATION include/libzsh
)

# ZLE headers
install(FILES
    ${ZSH_ZLE_DIR}/zle.h
    DESTINATION include/libzsh/Zle
)

# CMake package config for find_package support
install(EXPORT libzsh-targets
    FILE libzsh-targets.cmake
    NAMESPACE libzsh::
    DESTINATION lib/cmake/libzsh
)

include(CMakePackageConfigHelpers)
configure_package_config_file(
    ${CMAKE_SOURCE_DIR}/cmake/libzsh-config.cmake.in
    ${CMAKE_BINARY_DIR}/libzsh-config.cmake
    INSTALL_DESTINATION lib/cmake/libzsh
)
install(FILES ${CMAKE_BINARY_DIR}/libzsh-config.cmake
    DESTINATION lib/cmake/libzsh
)

# Tests
option(LIBZSH_BUILD_TESTS "Build tests" ON)
if(LIBZSH_BUILD_TESTS)
    enable_testing()

    add_executable(test_libzsh tests/test_main.c)
    target_link_libraries(test_libzsh PRIVATE zsh)

    add_executable(test_zle tests/test_zle.c)
    target_link_libraries(test_zle PRIVATE zsh)

    # Add the tests
    add_test(NAME libzsh_tests COMMAND test_libzsh)
    add_test(NAME zle_tests COMMAND test_zle)
endif()

# Examples
option(LIBZSH_BUILD_EXAMPLES "Build examples" ON)
if(LIBZSH_BUILD_EXAMPLES)
    add_executable(zle_interactive examples/zle_interactive.c)
    target_link_libraries(zle_interactive PRIVATE zsh)
endif()
